--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,8 +19,8 @@
     <string name="app_name">Setup Wizard</string>
     <string name="os_name" translatable="false">LineageOS</string>
 
-    <string name="lineage_wizard_script_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script</string>
-    <string name="lineage_wizard_script_user_uri" translatable="false">android.resource://org.lineageos.setupwizard/raw/lineage_wizard_script_user</string>
+    <string name="calyx_wizard_script_uri" translatable="false">android.resource://org.calyxos.setupwizard/raw/calyx_wizard_script</string>
+    <string name="calyx_wizard_script_user_uri" translatable="false">android.resource://org.calyxos.setupwizard/raw/calyx_wizard_script_user</string>
 
     <string name="activity_label_empty" />
 
