--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -113,5 +113,6 @@
     <string name="install_apps_title">Additional Apps</string>
     <string name="install_apps_subtitle"><b>Review additional apps.</b> You can install them later as well.</string>
     <string name="install_apps_select_all">All of the following apps</string>
+    <string name="waiting_for_apps">Please wait while we finish setting up your device.</string>
 
 </resources>
