--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,6 +21,7 @@
 
     <string name="calyx_wizard_script_uri" translatable="false">android.resource://org.calyxos.setupwizard/raw/calyx_wizard_script</string>
     <string name="calyx_wizard_script_user_uri" translatable="false">android.resource://org.calyxos.setupwizard/raw/calyx_wizard_script_user</string>
+    <string name="calyx_wizard_script_managed_profile_uri" translatable="false">android.resource://org.calyxos.setupwizard/raw/calyx_wizard_script_managed_profile</string>
 
     <string name="activity_label_empty" />
 
