--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -52,6 +52,7 @@
     <string name="date_time_summary">Set your time zone and adjust current date and time if needed</string>
 
     <string name="location_access_summary"><b>Allow apps that have asked your permission</b> to use your location information. This may include your current location and past locations.</string>
+    <string name="location_agps_access_summary">Allow apps AGPS access</string>
 
     <string name="setup_mobile_data">Turn on cellular data</string>
     <string name="setup_mobile_data_no_service">No service</string>
